tests/paczka1/small_fuzzy/71460109.err
Error in line 8: 2l6XxV1kT0 S276 21,6
Error in line 6: t8WF A504 22,9
Error in line 13: t8WF S910 46,0
